# near-docker-runner

./: .gitignore  docker-compose.yml
backend/: Dockerfile  agent_manager.py  app.py  auth.py  config.py  env.sample  environment.py  models.py  pyproject.toml  rebuild_docker.sh  requirements-frozen.txt  requirements.txt  run.sh  setup.py  test.sh
backend/agents/example_agent/: Dockerfile  agent.py  agent2.py
backend/agents/langchain_agent/: .env.example  Dockerfile  README.md  app.py  base.py  docker-compose.yml  input_schema.json  output_parser.py  requirements.txt
frontend/: Dockerfile  README.md  USE.md
frontend/src/: App.css  App.js
frontend/src/components/AgentSelector/: AgentSelector.css  AgentSelector.js
frontend/src/components/Chat/: Chat.css  Chat.js  MessageInput.js  MessageList.js
frontend/src/components/Debug/: DebugPanel.css  DebugPanel.js
frontend/src/components/Login/: Login.css  Login.js
frontend/src/services/: api.js  auth.js  eventHandlers.js
